--- a/little-lemon/src/CSS/Body.css
+++ b/little-lemon/src/CSS/Body.css
@@ -3,8 +3,6 @@ body {
     font-family: 'Crimson Text', serif;
     margin-top: 3rem;
     margin-bottom: 3rem;
-    margin-left: 200px;
-    margin-right: 200px;
     font-family: "Karla", sans-serif;
     font-size: 18pt;
 }
@@ -34,4 +32,16 @@ button {
     border-radius: 8px;
     font-weight: bold;
     font-size: 18pt;
+}
+
+@media (max-width: 430px) {
+    body {
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+
+    header {
+        margin-left: -50px;
+        margin-right: -50px;
+    }
 }
