--- a/little-lemon/src/CSS/Footer.css
+++ b/little-lemon/src/CSS/Footer.css
@@ -1,20 +1,20 @@
 footer {
-    margin-left: -200px;
-    margin-right: -200px;
     margin-top: 150px;
     background-color: rgb(237, 239, 238);
 }
 
 .footermargin {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     flex-wrap: wrap;
-    margin-left: 200px;
-    margin-right: 200px;
+    justify-content: center;
+    margin-left: 8rem;
+    margin-right: 8rem;
 }
 
 .footerlogo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 50px;
 }
 
@@ -22,12 +22,32 @@ footer {
     height: 400px;
 }
 
+.footertext-container {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 70px;
+}
+
 #footertext {
     margin-top: 100px;
+    margin-right: 50px;
 }
 
 footer ul {
     list-style: none;
     padding: 0;
     margin-top: 0;
+}
+
+@media screen and (max-width: 1100px) {
+    .footermargin {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .footertext-container {
+        flex-direction: column;
+        max-width: 202px;
+    }
 }
