--- a/little-lemon/src/CSS/Header.css
+++ b/little-lemon/src/CSS/Header.css
@@ -1,21 +1,25 @@
 header {
+    background-color: rgb(73, 94, 87);
+    margin-top: 30px;
+    height: 450px;
+}
+
+.header-wrapper {
+    margin-left: 8rem;
+    margin-right: 8rem;
     display: flex;
     flex-direction: row;
-    background-color: rgb(73, 94, 87);
+    justify-content: space-between;
     flex-wrap: wrap;
-    margin-top: 30px;
-    margin-left: -200px;
-    margin-right: -200px;
-    height: 450px;
-    overflow: visible;
 }
 
 #headerright {
-    margin-left: 200px;
+    display: flex;
+    flex-direction: column;
 }
 
 #headerleft {
-    margin-right: 200px;
+    display: flex;
     border-radius: 8px;
 }
 
@@ -32,6 +36,12 @@ header h1 {
 }
 
 .headerp {
-    width: 550px;
+    max-width: 550px;
     margin-top: 0;
+}
+
+@media screen and (max-width: 1300px) {
+    .header-wrapper {
+        justify-content: center;
+    }
 }
