--- a/little-lemon/src/CSS/Footer.css
+++ b/little-lemon/src/CSS/Footer.css
@@ -1,6 +1,6 @@
 footer {
     margin-top: 150px;
-    background-color: rgb(237, 239, 238);
+    background-color: rgb(73, 94, 87);
 }
 
 .footermargin {
@@ -33,10 +33,15 @@ footer {
     margin-right: 50px;
 }
 
+footer {
+    color: white;
+}
+
 footer ul {
     list-style: none;
     padding: 0;
     margin-top: 0;
+    color: white;
 }
 
 @media screen and (max-width: 1100px) {
