--- a/little-lemon/src/CSS/Header.css
+++ b/little-lemon/src/CSS/Header.css
@@ -40,8 +40,19 @@ header h1 {
     margin-top: 0;
 }
 
+.link-reservations {
+    text-decoration: none;
+    color: black;
+}
+
 @media screen and (max-width: 1300px) {
     .header-wrapper {
         justify-content: center;
+    }
+}
+
+@media screen and (max-width: 655px) {
+    header {
+        height: 550px;
     }
 }
